@@ -24,6 +24,7 @@ Mark Favas			bug reports
 Dan Fandrich			bug reports
 Alexandre Fayolle		bug reports
 Horst Gassner			bug reports and suggestions
+Stuart D. Gathman		bug reports and suggestions
 Tim Hochberg			bug reports
 Ben Hutchings			bug reports
 Brad Knotwell			bug reports
