@@ -1,0 +1,8 @@
+'d'
+
+def y(v):
+  x = len(v)
+  if x == 0 :
+    return x
+  else :
+    return x - 1
